Bug 1296250 - Part 1. Correct the condition of an assertion in SetStyleImage. r=heycam

MozReview-Commit-ID: YKxbUTbjIc